deps/src/cmake-3.9.3/Tests/RunCMake/Syntax/CMP0053-NameWithSpacesQuoted-stderr.txt
^CMake Error at CMP0053-NameWithSpacesQuoted.cmake:2 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/CMP0053-NameWithSpacesQuoted.cmake:2

  when parsing string

    \${var with space}

  Invalid character \(' '\) in a variable name: 'var'
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
